--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
-    <title>React App</title>
+    <title>One-Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
